--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,8 @@
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "outDir": "./dist",
-    "typeRoots": ["./node_modules/@types", "types"]
+    "typeRoots": ["./node_modules/@types", "types"],
+    "baseUrl": "src",
   },
-  "include": [
-    "./src/**/*"
-  ]
+  "include": ["src"]
 }
