--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
@@ -22,5 +22,5 @@
     "typeRoots": ["./node_modules/@types", "types"],
     "baseUrl": "src",
   },
-  "include": ["src"]
+  "include": ["src", "src/api/ajax.js"]
 }
