--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webradio-with-react",
-  "version": "0.1.0",
+  "version": "1.0.7",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
+    "cheerio": "^1.0.0",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
